--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+:root {
+  --primary-colour: #6161d5;
+}
+
 body {
   font-family: sans-serif;
   background: #f7efef;
@@ -21,6 +25,15 @@ p {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   grid-gap: 1.5rem;
+}
+
+button {
+  width: 100%;
+  height: 40px;
+  background: var(--primary-colour);
+  color: white;
+  border: none;
+  cursor: pointer;
 }
 
 .article-item {
@@ -44,13 +57,49 @@ p {
   background: rgba(255, 0, 0, 0.144);
 }
 
-.search {
-  padding: 0.5rem;
-  border: 1px solid lightgray;
+.message.warning {
+  border-color: rgb(238, 183, 32);
+  color: white;
+  background: rgb(238, 183, 32);
 }
 
 .fav-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.menu a {
+  text-decoration: none;
+  color: #333;
+  padding-right: 1rem;
+}
+
+.menu a.active {
+  color: var(--primary-colour);
+}
+
+.search-form {
+  height: 30vh;
+}
+
+form {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 63vh;
+  max-width: 500px;
+}
+
+form > div {
+  margin-bottom: 1rem;
+}
+
+form input,
+.search {
+  width: 100%;
+  padding: 0.9rem;
+  font-size: 14px;
+  border: 1px solid lightgray;
 }
