--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,8 +28,8 @@ p {
 }
 
 button {
-  width: 100%;
-  height: 40px;
+  width: auto;
+  padding: 1rem;
   background: var(--primary-colour);
   color: white;
   border: none;
